--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@google/generative-ai": "^0.24.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "lucide-react": "^0.485.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-bootstrap-icons": "^1.11.4",
