--- a/portfoliov2/package.json
+++ b/portfoliov2/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "react": "^19.0.0",
